feat/retrieve track list when get album info